--- a/ConsoleHost/App.config
+++ b/ConsoleHost/App.config
@@ -1,22 +1,12 @@
-<?xml version="1.0"?>
-
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<system.web>
-		<compilation debug="true" targetFramework="4.0" />
-	</system.web>
-
 	<system.serviceModel>
 		<services>
 			<service name="ScottyApps.WCFPractice.CalcService.CalcService" behaviorConfiguration="generalBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="http://localhost/CalcService"/>
-						<!--<add baseAddress="net.tcp://localhost/CalcService"/>-->
+						<add baseAddress="net.tcp://localhost/CalcService"/>
 					</baseAddresses>
 				</host>
 				<endpoint
@@ -53,4 +43,5 @@
 		</behaviors>
 		<serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
 	</system.serviceModel>
+
 </configuration>
