--- a/ConsoleClient/app.config
+++ b/ConsoleClient/app.config
@@ -3,23 +3,19 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
+                <binding name="NetTcpBinding_ICalcService">
+                    <security mode="None" />
+                </binding>
                 <binding name="NetTcpBinding_IEcho">
                     <security mode="None" />
                 </binding>
             </netTcpBinding>
-            <wsHttpBinding>
-                <binding name="WSHttpBinding_ICalcService" />
-            </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://cdc312800.gdnchina.com/CalcService/CalcService.svc"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICalcService"
-                contract="ICalcService" name="WSHttpBinding_ICalcService">
-                <identity>
-                    <servicePrincipalName value="host/CDC312800.gdnchina.com" />
-                </identity>
-            </endpoint>
-            <endpoint address="net.tcp://localhost/CalcService/CalcService.svc"
+            <endpoint address="net.tcp://localhost:2013/CalcService/netTcpICalc"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ICalcService"
+                contract="ICalcService" name="NetTcpBinding_ICalcService" />
+            <endpoint address="net.tcp://localhost:2013/CalcService/netTcpIEcho"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEcho"
                 contract="IEcho" name="NetTcpBinding_IEcho" />
         </client>
