--- a/ConsoleHost/App.config
+++ b/ConsoleHost/App.config
@@ -1,29 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<system.diagnostics>
+		<sources>
+			<source name="System.ServiceModel"
+                    switchValue="Information, ActivityTracing"
+                    propagateActivity="true">
+				<listeners>
+					<add name="traceListener"
+						type="System.Diagnostics.XmlWriterTraceListener"
+						initializeData= "D:\log\Traces.svclog" />
+				</listeners>
+			</source>
+		</sources>
+	</system.diagnostics>
 	<system.serviceModel>
 		<services>
 			<service name="ScottyApps.WCFPractice.CalcService.CalcService" behaviorConfiguration="generalBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="http://localhost/CalcService"/>
-						<add baseAddress="net.tcp://localhost/CalcService"/>
+						<add baseAddress="net.tcp://localhost:2013/CalcService"/>
 					</baseAddresses>
 				</host>
-				<endpoint
-					address=""
+				<!--<endpoint
+					address="ws"
 					binding="wsHttpBinding"
+					contract="ScottyApps.WCFPractice.CalcService.ICalcService" />-->
+				<endpoint
+					address="netTcpICalc"
+					binding="netTcpBinding"
+					bindingConfiguration="PortSharingBinding"
 					contract="ScottyApps.WCFPractice.CalcService.ICalcService" />
 				<endpoint
-					address=""
+					address="netTcpIEcho"
 					binding="netTcpBinding"
-					contract="ScottyApps.WCFPractice.CalcService.IEcho"
-					bindingConfiguration="PortSharingBinding" />
+					bindingConfiguration="PortSharingBinding"
+					contract="ScottyApps.WCFPractice.CalcService.IEcho" />
 				<endpoint address="mexTcp"
-						  binding="mexTcpBinding"
+						  binding="netTcpBinding"
+						  bindingConfiguration="PortSharingBinding"
 						  contract="IMetadataExchange" />
-				<endpoint address="mexWS"
+				<!--<endpoint address="mexWS"
 						  binding="mexHttpBinding"
-						  contract="IMetadataExchange" />
+						  contract="IMetadataExchange" />-->
 			</service>
 		</services>
 		<bindings>
@@ -36,7 +55,7 @@
 		<behaviors>
 			<serviceBehaviors>
 				<behavior name="generalBehavior">
-					<serviceMetadata httpGetEnabled="true" />
+					<serviceMetadata httpGetEnabled="true" httpGetUrl="http://localhost/CalcService/Service.svc" />
 					<serviceDebug includeExceptionDetailInFaults="true" />
 				</behavior>
 			</serviceBehaviors>
