--- a/CalcService/CalcService.csproj
+++ b/CalcService/CalcService.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICalcService.cs" />
+    <Compile Include="ICalculatorDuplexCallback.cs" />
     <Compile Include="IEcho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CalcService.cs" />
