added a new WebForm project to demonstrate the AJAX/JSONP WCF

--- a/IISHost/Web.config
+++ b/IISHost/Web.config
@@ -16,7 +16,7 @@
 				<host>
 					<baseAddresses>
 						<add baseAddress="http://localhost/CalcService"/>
-						<!--<add baseAddress="net.tcp://localhost/CalcService"/>-->
+						<add baseAddress="net.tcp://localhost/CalcService"/>
 					</baseAddresses>
 				</host>
 				<endpoint
